# NURBS_fit

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/tongji/lzt/nurbs_fit/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  NURBS.cpp  NURBS.h  native-lib.cpp
app/src/main/cpp/log/: AndroidLog.h
app/src/main/java/tongji/lzt/nurbs_fit/: DrawView.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/tongji/lzt/nurbs_fit/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
